@@ -16,6 +16,7 @@
 	* Colours for walls and floor of special dungeon regions in TTY mode, work by "L" (Leon Arnott), slightly modified. Affects beehives, gardens, Mines, Wizard's tower, Astral Plane and altars.
 	* Rooms on nymph level are now gardens
 	* Anti-magic field should be now noticeable + it will affect monsters (from Sporkhack)
+	* Orcs start with sickness potion (from Sporkhack - https://github.com/Bulwersator/CopyOfSporkHack/commit/04a696cc8e12f67cadd6618fafd2d8c2aed4ba51 )
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
